@@ -14,6 +14,7 @@
 - Fix auto-assigned IDs overlapping when adding vehicles.
 - Add sprite cache.
 - Optimize memory usage when writing NewGRF.
+- Optimize grf file size by removing duplicate sprites (by data).
 - Add `Mask`, `FileMask` and `ImageMask` classes to define sprite masks.
 - Add `mode` argument to `Mask` with option to overdraw sprite.
 - Add `ShipFlags` enum.
